@@ -65,6 +65,13 @@ This informational message is printed every time DHCPv6 is started.
 It indicates what database backend type is being to store lease and
 other information.
 
+% DHCP6_DB_ERROR_LEASE6_WITHOUT_DUID database error: DB returns a lease for address %1 without any DUID
+This error message indicates database consistency failure. Database has an entry
+for a given address and believes it is currently used, but it does not
+contain client-id information. This is most likely a software error.
+Please contact ISC. As a temporary workaround, please manually remove
+lease entry from the database.
+
 % DHCP6_LEASE_ADVERT lease %1 advertised (client duid=%2, iaid=%3)
 This debug message indicates that the server successfully advertised
 a lease. It is up to the client to choose one server out of othe advertised
@@ -85,6 +92,27 @@ and incicates successful operation.
 This message indicates that the server failed to grant (in response to
 received REQUEST) a lease for a given client. There may be many reasons for
 such failure. Each specific failure is logged in a separate log entry.
+
+% DHCP6_RELEASE Address %1 belonging to client duid=%2, iaid=%3 was released properly.
+This debug message indicates that an address was released properly. This
+is a normal operation during client shutdown.
+
+% DHCP6_RELEASE_FAIL Database failed to remove lease for address %1 for duid=%2, iaid=%3
+This error message incidates that database failed to release a lease.
+This indicates a database operation error and likely requires administrator
+intervention (e.g. check if DHCP process has sufficient priviledges to update
+database).
+
+% DHCP6_RELEASE_FAIL_WRONG_DUID Client (duid=%2) tried to release address %2, but it belongs to client (duid=%3)
+This warning message indicates that client tried to release an address that
+does belong to a different client. This should not happen in normal circumstances,
+but since the client is releasing it will stop using released addresses anyway,
+so there is a good chance that the situation will correct itself.
+
+% DHCP6_RELEASE_FAIL_WRONG_IAID Client (duid=%2) tried to release address %2, but it used wrong IAID (expected %4, but got %3)
+This warning message indicates that client tried to release an address that
+does belong to it, but was expected in a different IA container. This likely
+means that the client's support for multiple address is buggy.
 
 % DHCP6_REQUIRED_OPTIONS_CHECK_FAIL %1 message received from %2 failed the following check: %3
 This message indicates that received DHCPv6 packet is invalid.  This may be due
@@ -216,3 +244,8 @@ recently and does not recognize its well-behaving clients. This is more
 probable if you see many such messages. Clients will recover from this,
 but they will most likely get a different IP addresses and experience
 a brief service interruption.
+
+% DHCP6_UNKNOWN_RELEASE received RELEASE from unknown client (duid=%1, iaid=%2)
+This warning message is printed when client attempts to release a lease,
+but no such lease is known by the server. See DHCP6_UNKNOWN_RENEW for
+possible reasons for such behavior.
